--- a/bio.html
+++ b/bio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bio - Khebbab Mohamed</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&family=Poppins:wght@300;400;600;700&display=swap');
         
         * {
             margin: 0;
@@ -14,8 +14,8 @@
         }
 
         body {
-            font-family: 'Press Start 2P', cursive;
-            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #0a0e27 0%, #1a1f3a 50%, #0f2847 100%);
             background-attachment: fixed;
             min-height: 100vh;
             display: flex;
@@ -33,45 +33,64 @@
             width: 100%;
             height: 100%;
             background-image: 
-                repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(0, 245, 255, 0.03) 2px, rgba(0, 245, 255, 0.03) 4px);
+                repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(0, 245, 255, 0.02) 2px, rgba(0, 245, 255, 0.02) 4px);
             pointer-events: none;
             z-index: 1;
         }
 
-        /* Navigation */
         nav {
             position: fixed;
-            top: 30px;
-            left: 30px;
+            top: 40px;
+            left: 40px;
             z-index: 20;
             display: flex;
             flex-direction: column;
-            gap: 12px;
+            gap: 10px;
         }
 
         nav a {
             display: inline-block;
-            padding: 10px 16px;
-            background: #ff006e;
+            padding: 12px 20px;
+            background: linear-gradient(135deg, #ff006e 0%, #ff1493 100%);
             color: #fff;
             text-decoration: none;
-            font-size: 10px;
-            border: 3px solid #00f5ff;
-            box-shadow: 4px 4px 0 rgba(0, 245, 255, 0.5), 8px 8px 0 rgba(255, 0, 110, 0.2);
-            transform: skewX(-5deg);
-            transition: all 0.2s ease;
+            font-size: 11px;
+            font-weight: 600;
+            font-family: 'JetBrains Mono', monospace;
+            border: 2px solid #00f5ff;
+            border-radius: 4px;
+            box-shadow: 0 8px 24px rgba(255, 0, 110, 0.2), 0 0 20px rgba(0, 245, 255, 0.15);
+            transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
+            position: relative;
             letter-spacing: 1px;
+            overflow: hidden;
+        }
+
+        nav a::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.1);
+            transition: left 0.3s ease;
+            z-index: -1;
         }
 
         nav a:hover {
-            transform: skewX(-5deg) translateY(-3px);
-            box-shadow: 6px 6px 0 rgba(0, 245, 255, 0.8), 12px 12px 0 rgba(255, 0, 110, 0.3);
-            background: #ff1493;
+            transform: translateY(-3px);
+            box-shadow: 0 12px 32px rgba(255, 0, 110, 0.3), 0 0 30px rgba(0, 245, 255, 0.25);
+            border-color: #06ffa5;
+        }
+
+        nav a:hover::before {
+            left: 100%;
         }
 
         nav a.active {
-            background: #06ffa5;
-            color: #0f3460;
+            background: linear-gradient(135deg, #06ffa5 0%, #00f5ff 100%);
+            color: #0f2847;
             border-color: #ffd60a;
         }
 
@@ -82,38 +101,46 @@
             align-items: center;
             position: relative;
             z-index: 5;
-            padding: 60px 40px;
+            padding: 100px 40px;
         }
 
         .content {
-            max-width: 600px;
-            background: rgba(22, 33, 62, 0.8);
-            border: 4px solid #00f5ff;
-            padding: 40px;
-            box-shadow: 0 0 30px rgba(0, 245, 255, 0.3), inset 0 0 20px rgba(0, 245, 255, 0.1);
-            animation: slideIn 0.5s ease-out;
+            max-width: 700px;
+            background: rgba(10, 14, 39, 0.7);
+            border: 2px solid #00f5ff;
+            border-radius: 8px;
+            padding: 60px 50px;
+            box-shadow: 0 0 40px rgba(0, 245, 255, 0.15), inset 0 0 40px rgba(0, 245, 255, 0.05);
+            animation: slideIn 0.6s ease-out;
+            backdrop-filter: blur(10px);
         }
 
         .content h1 {
+            font-family: 'JetBrains Mono', monospace;
             color: #ffd60a;
-            font-size: 24px;
+            font-size: 28px;
             margin-bottom: 30px;
-            text-shadow: -2px -2px 0 #ff006e;
             letter-spacing: 2px;
+            font-weight: 700;
+            text-transform: uppercase;
         }
 
         .content p {
             color: #06ffa5;
-            font-size: 9px;
+            font-size: 15px;
             line-height: 1.8;
-            margin-bottom: 15px;
-            text-shadow: -1px -1px 0 rgba(0, 245, 255, 0.3);
+            margin-bottom: 20px;
+            font-weight: 300;
+        }
+
+        .content p:last-child {
+            margin-bottom: 0;
         }
 
         @keyframes slideIn {
             from {
                 opacity: 0;
-                transform: translateY(20px);
+                transform: translateY(30px);
             }
             to {
                 opacity: 1;
@@ -123,25 +150,26 @@
 
         @media (max-width: 768px) {
             nav {
-                top: 15px;
-                left: 15px;
+                top: 20px;
+                left: 20px;
             }
 
             .container {
-                padding: 30px 20px;
+                padding: 80px 20px 40px;
             }
 
             .content {
-                padding: 25px;
-                border: 2px solid #00f5ff;
+                padding: 40px 30px;
+                border-radius: 6px;
             }
 
             .content h1 {
-                font-size: 14px;
+                font-size: 20px;
             }
 
             .content p {
-                font-size: 7px;
+                font-size: 13px;
+                line-height: 1.6;
             }
         }
     </style>
@@ -156,17 +184,18 @@
 
     <div class="container">
         <div class="content">
-            <h1>>>> BIO <<<</h1>
+            <h1>About Me</h1>
             <p>
-                Hey there, I'm Khebbab Mohamed! A passionate developer and tech enthusiast exploring the digital frontier. With a love for creative coding and innovative solutions, I'm on a quest to build amazing projects that make a difference.
+                Hey there, I'm Khebbab Mohamed! A passionate developer and tech enthusiast exploring the digital frontier with creativity and precision. With a love for elegant code and innovative solutions, I'm on a quest to build amazing projects that make a real difference.
             </p>
             <p>
-                I'm interested in full-stack development, web technologies, and bringing ideas to life through code. Always learning, always growing, and always pushing boundaries.
+                I'm deeply interested in full-stack development, modern web technologies, and bringing bold ideas to life through clean, performant code. Always learning, always growing, and always pushing the boundaries of what's possible.
             </p>
             <p>
-                Welcome to my 8-bit corner of the internet! 🎮
+                Welcome to my corner of the internet. Let's create something extraordinary together.
             </p>
         </div>
     </div>
 </body>
 </html>
+
