--- a/bio.html
+++ b/bio.html
@@ -180,6 +180,7 @@
         <a href="bio.html" class="active">BIO</a>
         <a href="aboutme.html">ABOUT ME</a>
         <a href="career.html">CAREER</a>
+        <a href="contact.html">CONTACT</a>
     </nav>
 
     <div class="container">
