--- a/bio.html
+++ b/bio.html
@@ -199,6 +199,7 @@
         <a href="aboutme.html">ABOUT ME</a>
         <a href="career.html">CAREER</a>
         <a href="contact.html">CONTACT</a>
+        <a href="forum.html">FORUM</a>
     </nav>
 
     <div class="container">
