--- a/bio.html
+++ b/bio.html
@@ -197,7 +197,7 @@
         <a href="index.html">HOME</a>
         <a href="bio.html" class="active">BIO</a>
         <a href="aboutme.html">ABOUT ME</a>
-        <a href="career.html">CAREER</a>
+        <a href="cv.html">CV</a>
         <a href="contact.html">CONTACT</a>
         <a href="forum.html">FORUM</a>
     </nav>
